# Prediction-Market-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_backtest.py  run_diffusion_experiment.py  run_diffusion_mve.py  run_live.py  run_multi_backtest.py  run_quick_sim.py  run_simulation.py
apps/api/: pyproject.toml
apps/api/src/api/: config.py  deps.py  main.py
apps/api/src/api/routers/: health.py  markets.py
apps/worker/: pyproject.toml
apps/worker/src/worker/: config.py  main.py
apps/worker/src/worker/tasks/: ingest.py
data/diffusion_mve/: cfm_mve.pt  cfm_mve.stats.npz
data/models/: calibrator_crypto.lgb  calibrator_crypto.lgb.meta.json  calibrator_latest.lgb  calibrator_latest.lgb.meta.json  calibrator_other.lgb  calibrator_other.lgb.meta.json  calibrator_tech.lgb  calibrator_tech.lgb.meta.json  calibrator_walkforward.lgb  calibrator_walkforward.lgb.meta.json  cfm_latest.meta.json  cfm_latest.pt  cfm_latest.stats.npz
data/models/dpo/: dpo_config.json  train_dpo.py
infra/: docker-compose.yml
infra/migrations/: alembic.ini  env.py
infra/migrations/versions/: 7ae23c633598_initial_schema.py
tests/: test_backtest_and_evidence.py  test_live_and_mapper.py
