[project]
name = "prediction-agent"
version = "0.1.0"
description = "Local-first prediction market forecasting and trading agent"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "alembic>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
