[project]
name = "prediction-agent-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "prediction-agent-shared",
    "prediction-agent-schemas",
    "prediction-agent-market-ingest",
    "celery[redis]>=5.4",
]

[tool.uv.sources]
prediction-agent-shared = { workspace = true }
prediction-agent-schemas = { workspace = true }
prediction-agent-market-ingest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
